--- a/Notes/6.7-Paralle-Data.md
+++ b/Notes/6.7-Paralle-Data.md
@@ -536,7 +536,7 @@ END!
 ---
 
 ## Pad
-### with Reduction
+### without Reduction
 
 ```
 $ make
@@ -800,3 +800,234 @@ END!
                     0.00%       0ns        12       0ns       0ns       0ns  acc_delete@layers.c:53
                     0.00%       0ns      3600       0ns       0ns       0ns  acc_delete@layers.c:108
 ```
+## Pad 50k
+### code
+```c
+60:
+void pad_input(float* restrict X, Conv_Layer* l) {
+#pragma acc parallel loop present(l,X) 
+  for ( int c = 0; c < l->in_depth; c++) {
+    #pragma acc loop independent
+    for (int j = 0; j < l->in_height; j++) {
+      #pragma acc loop independent
+      for (int i = 0; i < l->in_width; i++) {
+        // ...
+
+
+78:
+void conv_forward(float* restrict X, Conv_Layer* l, float* restrict Y) {
+  int in_size = l->in_width*l->in_height*l->in_depth;
+#pragma acc data copyin(X[0:in_size]) copyout(Y[0:l->out_size]) present(l)
+  {
+    pad_input(X, l); //Create input with zero-padding
+   // For each output feature map
+#pragma acc parallel loop present(l,X,Y)
+    for ( int m = 0; m < l->out_depth; m++) {
+      #pragma acc loop independent
+      for (int j = 0; j < l->out_height; j++) {
+        #pragma acc loop independent
+        for (int i = 0; i < l->out_width; i++) {
+          int y_idx = i + (l->out_width * (j + m * l->out_height)); // Output index
+          // Calculate dot product of Weights*Input
+          float sum = 0.0f;
+        #pragma acc loop  reduction(+:sum)
+          for (int c = 0; c < l->in_depth; c++) {
+            for (int f_j = 0; f_j < l->filter_width; f_j++) {
+              for (int f_i = 0; f_i < l->filter_width; f_i++) {
+```
+
+### Minfo
+```
+$ make
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native  -c layers.c -o layers.o
+make_conv_layer:
+     42, Generating enter data copyin(layer[:1])
+         Generating enter data create(layer->weights[:layer->weights_size])
+         Generating enter data copyin(layer->in_padded[:layer->padded_size])
+         Generating enter data create(layer->bias[:M])
+free_conv:
+     53, Generating exit data delete(l->bias[:l->out_depth],l->in_padded[:l->padded_size],l[:1],l->weights[:l->weights_size])
+pad_input:
+     60, Generating present(X[:],l[:])
+         Generating implicit firstprivate(c)
+         Generating NVIDIA GPU code
+         62, #pragma acc loop gang /* blockIdx.x */
+         64, #pragma acc loop seq
+         66, #pragma acc loop vector(128) /* threadIdx.x */
+     64, Loop is parallelizable
+     66, Loop is parallelizable
+conv_forward:
+     81, Generating copyin(X[:in_size]) [if not already present]
+         Generating copyout(Y[:l->out_size]) [if not already present]
+         Generating present(l[:])
+     82, Generating present(l[:],Y[:],X[:])
+         Generating implicit firstprivate(m)
+         Generating NVIDIA GPU code
+         85, #pragma acc loop gang /* blockIdx.x */
+         87, #pragma acc loop seq
+         89, #pragma acc loop seq
+         94, #pragma acc loop seq
+         95, #pragma acc loop seq
+         96, #pragma acc loop vector(128) /* threadIdx.x */
+             Generating reduction(+:sum)
+     87, Loop is parallelizable
+     89, Loop is parallelizable
+     94, Loop is parallelizable
+     95, Loop is parallelizable
+     96, Loop is parallelizable
+    101, FMA (fused multiply-add) instruction(s) generated
+pool_forward:
+    184, Zero trip check eliminated
+fc_forward:
+    239, FMA (fused multiply-add) instruction(s) generated
+load_conv:
+    300, Generating update device(l->weights[:l->weights_size],l->bias[:l->out_depth])
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native  -o cnn-cifar10 main.o layers.o malloc2D.o timer.o
+```
+
+### execution
+```
+$ ./cnn-cifar10 
+Parallel (pad) Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.922217 seconds
+Create Network time:0.256042 seconds
+Load Network Parameters time:0.044504 seconds
+Create Ouputs time:0.000403 seconds
+
+Net Forward total time:157.489354 seconds
+    Time for conv1: 83.147804 seconds
+    Time for relu1: 0.504927 seconds
+    Time for pool1: 2.022948 seconds
+    Time for conv2: 53.128675 seconds
+    Time for relu2: 0.155501 seconds
+    Time for pool2: 0.659966 seconds
+    Time for conv3: 17.397355 seconds
+    Time for relu3: 0.045444 seconds
+    Time for pool3: 0.164105 seconds
+    Time for fc: 0.217070 seconds
+    Time for softmax: 0.023882 seconds
+
+  Conv: 153.673834 seconds
+  ReLU: 0.705872 seconds
+  Pool: 2.847019 seconds
+  FC:   0.217070 seconds
+  Softmax: 0.023882 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.001368 seconds
+Free memory time:0.040154 seconds
+Total time:158.754041 seconds
+END!
+```
+
+### Profiling
+#### nvprof
+
+```
+$ nvprof ./cnn-cifar10-profile 
+Parallel (pad) Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.763341 seconds
+==3131715== NVPROF is profiling process 3131715, command: ./cnn-cifar10-profile
+Create Network time:0.533695 seconds
+Load Network Parameters time:0.008640 seconds
+Create Ouputs time:0.000350 seconds
+
+Net Forward total time:162.044456 seconds
+    Time for conv1: 84.843385 seconds
+    Time for relu1: 0.686628 seconds
+    Time for pool1: 1.601398 seconds
+    Time for conv2: 54.708089 seconds
+    Time for relu2: 0.204118 seconds
+    Time for pool2: 0.531737 seconds
+    Time for conv3: 19.012389 seconds
+    Time for relu3: 0.057542 seconds
+    Time for pool3: 0.132855 seconds
+    Time for fc: 0.218862 seconds
+    Time for softmax: 0.016533 seconds
+
+  Conv: 158.563863 seconds
+  ReLU: 0.948288 seconds
+  Pool: 2.265990 seconds
+  FC:   0.218862 seconds
+  Softmax: 0.016533 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.001300 seconds
+Free memory time:0.041859 seconds
+Total time:163.393641 seconds
+END!
+==3131715== Profiling application: ./cnn-cifar10-profile
+==3131715== Profiling result:
+            Type  Time(%)      Time     Calls       Avg       Min       Max  Name
+ GPU activities:   99.19%  146.132s    150000  974.21us  307.39us  1.7892ms  _8layers_c_conv_forward_82_gpu
+                    0.32%  464.21ms    150000  3.0940us  2.8790us  13.568us  _8layers_c_pad_input_60_gpu
+                    0.30%  446.98ms    150000  2.9790us  1.3430us  18.368us  [CUDA memcpy DtoH]
+                    0.19%  276.48ms    150030  1.8420us     672ns  5.7910us  [CUDA memcpy HtoD]
+      API calls:   96.45%  148.174s    900012  164.64us     579ns  4.0498ms  cuStreamSynchronize
+                    1.69%  2.59074s    150000  17.271us  10.338us  2.0757ms  cuMemcpyDtoHAsync
+                    0.79%  1.22025s    300000  4.0670us  3.1190us  1.1529ms  cuLaunchKernel
+                    0.76%  1.17456s    150030  7.8280us  2.8200us  1.1561ms  cuMemcpyHtoDAsync
+                    0.12%  180.76ms    600000     301ns     180ns  1.3824ms  cuOccupancyMaxActiveBlocksPerMultiprocessor
+                    0.10%  147.81ms         1  147.81ms  147.81ms  147.81ms  cuDevicePrimaryCtxRetain
+                    0.04%  59.195ms    300009     197ns     124ns  672.37us  cuDeviceGetAttribute
+                    0.03%  42.314ms         1  42.314ms  42.314ms  42.314ms  cuMemHostAlloc
+                    0.02%  26.111ms     50020     522ns     347ns  31.947us  cuPointerGetAttributes
+                    0.01%  11.351ms         2  5.6754ms     719ns  11.350ms  cuModuleGetFunction
+                    0.00%  3.1803ms        19  167.38us  2.8350us  3.0780ms  cuMemAlloc
+                    0.00%  1.4343ms         1  1.4343ms  1.4343ms  1.4343ms  cuMemAllocHost
+                    0.00%  292.23us         1  292.23us  292.23us  292.23us  cuModuleLoadDataEx
+                    0.00%  6.9250us         1  6.9250us  6.9250us  6.9250us  cuDeviceGetPCIBusId
+                    0.00%  6.2280us         1  6.2280us  6.2280us  6.2280us  cuCtxGetCurrent
+                    0.00%  3.2020us         3  1.0670us     191ns  1.5090us  cuCtxSetCurrent
+                    0.00%  2.3440us         3     781ns     176ns  1.9480us  cuDeviceGetCount
+                    0.00%     747ns         3     249ns     143ns     431ns  cuDriverGetVersion
+                    0.00%     712ns         2     356ns     156ns     556ns  cuDeviceGet
+                    0.00%     422ns         1     422ns     422ns     422ns  cuDeviceComputeCapability
+ OpenACC (excl):   92.89%  146.887s    300000  489.62us  1.6810us  4.0517ms  acc_wait@layers.c:82
+                    1.73%  2.73116s    150000  18.207us  11.095us  2.0772ms  acc_enqueue_download@layers.c:110 (Y[:l->out_size])
+                    0.83%  1.30743s    150000  8.7160us  4.3320us  1.1577ms  acc_enqueue_upload@layers.c:81 (X[:in_size])
+                    0.67%  1.06279s    300000  3.5420us  1.1810us  993.27us  acc_wait@layers.c:60
+                    0.55%  874.92ms    150000  5.8320us  4.7630us  1.1861ms  acc_enter_data@layers.c:81
+                    0.55%  870.43ms    150000  5.8020us  4.7730us  886.52us  acc_enqueue_launch@layers.c:60 (_8layers_c_pad_input_60_gpu)
+                    0.44%  699.24ms    150000  4.6610us  4.0120us  1.1544ms  acc_enqueue_launch@layers.c:82 (_8layers_c_conv_forward_82_gpu)
+                    0.43%  674.18ms    150000  4.4940us  3.5500us  837.81us  acc_exit_data@layers.c:81
+                    0.38%  607.72ms    150000  4.0510us  2.0320us  758.11us  acc_wait@layers.c:81
+                    0.29%  455.12ms    150000  3.0340us  2.5760us  1.4108ms  acc_compute_construct@layers.c:60
+                    0.28%  450.60ms    150000  3.0040us  2.3480us  1.1867ms  acc_compute_construct@layers.c:82
+                    0.21%  337.00ms    150000  2.2460us  1.7420us  839.48us  acc_wait@layers.c:110
+                    0.19%  304.33ms    150000  2.0280us  1.7910us  1.1361ms  acc_enter_data@layers.c:82
+                    0.18%  287.32ms    150000  1.9150us  1.4540us  802.86us  acc_enter_data@layers.c:60
+                    0.18%  278.76ms    150000  1.8580us  1.5330us  23.828us  acc_exit_data@layers.c:82
+                    0.16%  255.43ms    150000  1.7020us  1.2950us  791.98us  acc_exit_data@layers.c:60
+                    0.03%  42.772ms         9  4.7524ms  10.905us  42.445ms  acc_enter_data@layers.c:42
+                    0.00%  355.40us         1  355.40us  355.40us  355.40us  acc_device_init@layers.c:42
+                    0.00%  99.990us         9  11.110us  4.4850us  37.630us  acc_wait@layers.c:42
+                    0.00%  84.463us        18  4.6920us     942ns  24.693us  acc_enqueue_upload@layers.c:42 (.attach.)
+                    0.00%  63.897us        18  3.5490us     877ns  22.227us  acc_enqueue_upload@layers.c:53 (.detach.)
+                    0.00%  47.547us         3  15.849us  4.7730us  33.747us  acc_enqueue_upload@layers.c:42 (layer[:1])
+                    0.00%  43.787us         9  4.8650us  1.7250us  18.546us  acc_exit_data@layers.c:53
+                    0.00%  42.092us         3  14.030us  7.9530us  18.942us  acc_enqueue_upload@layers.c:300 (l->weights[:l->weights_size])
+                    0.00%  31.988us         3  10.662us  8.1580us  13.319us  acc_enqueue_upload@layers.c:42 (layer->in_padded[:layer->padded_size])
+                    0.00%  21.987us         3  7.3290us  3.9460us  9.5190us  acc_wait@layers.c:300
+                    0.00%  13.203us         3  4.4010us  2.9020us  7.0810us  acc_update@layers.c:300
+                    0.00%  12.310us         3  4.1030us  3.6690us  4.7190us  acc_enqueue_upload@layers.c:300 (l->bias[:l->out_depth])
+                    0.00%       0ns    300000       0ns       0ns       0ns  acc_delete@layers.c:110
+                    0.00%       0ns         6       0ns       0ns       0ns  acc_alloc@layers.c:81
+                    0.00%       0ns    300000       0ns       0ns       0ns  acc_create@layers.c:81
+                    0.00%       0ns        12       0ns       0ns       0ns  acc_alloc@layers.c:42
+                    0.00%       0ns        12       0ns       0ns       0ns  acc_create@layers.c:42
+                    0.00%       0ns        12       0ns       0ns       0ns  acc_delete@layers.c:53
+```
+
