ph4070ti: Kernels

--- a/Notes/ph4070ti/2.1-Kernels.md
+++ b/Notes/ph4070ti/2.1-Kernels.md
@@ -1,5 +1,27 @@
 # Kernels construct, managed
 ## Code
+```c
+46: void conv_forward(float* restrict X, Conv_Layer* l, float* restrict Y) {
+  
+    // For each output feature map
+  #pragma acc kernels 
+  {
+    for (int m = 0; m < l->out_depth; m++) {
+      for (int j = 0; j < l->out_height; j++) {
+        for (int i = 0; i < l->out_width; i++) {
+          int y_idx = i + (l->out_width * (j + m * l->out_height)); 
+          // Calculate dot product of Weights*Input
+          float sum = 0.0f;
+          #pragma acc loop reduction(+:sum) 
+          for (int c = 0; c < l->in_depth; c++) {
+            for (int f_j = 0; f_j < l->filter_width; f_j++) {
+              for (int f_i = 0; f_i < l->filter_width; f_i++) {
+                int f_idx = f_i + (f_j * l->filter_width) + (c + m * l->in_depth) * (l->filter_width * l->filter_width); 
+                int x_j = -l->padding + j * l->stride + f_j; 
+                int x_i = -l->padding + i * l->stride + f_i; 
+                // If in range of image, else zero
+                if (x_j >= 0 && x_i >= 0 && x_j < l->in_height && x_i < l->in_width) {
+```
 
 ## -Minfo
 ```
@@ -39,4 +61,41 @@ nvc -acc=gpu -gpu=managed -Minfo=all -c11 -Wall -Wextra -march=native  -o cnn-ci
 ```
 
 ## Execution
+```
+$ ./cnn-cifar10 
+Parallel (if) Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.276901 seconds
+Create Network time:0.000301 seconds
+Load Network Parameters time:0.003297 seconds
+Create Ouputs time:0.000266 seconds
+
+Net Forward total time:1212.809133 seconds
+    Time for conv1: 659.505084 seconds
+    Time for relu1: 8.339299 seconds
+    Time for pool1: 3.541356 seconds
+    Time for conv2: 418.506391 seconds
+    Time for relu2: 6.362949 seconds
+    Time for pool2: 1.094169 seconds
+    Time for conv3: 109.443641 seconds
+    Time for relu3: 4.521977 seconds
+    Time for pool3: 0.377222 seconds
+    Time for fc: 1.093869 seconds
+    Time for softmax: 0.010671 seconds
+
+  Conv: 1187.455117 seconds
+  ReLU: 19.224226 seconds
+  Pool: 5.012747 seconds
+  FC:   1.093869 seconds
+  Softmax: 0.010671 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000275 seconds
+Free memory time:0.016366 seconds
+Total time:1213.106539 seconds
 ```
