--- a/ph4070ti/2.3-Parallel.md
+++ b/ph4070ti/2.3-Parallel.md
@@ -61,32 +61,90 @@ nvc -acc=gpu -gpu=managed -Minfo=all -c11 -Wall -Wextra -march=native  -o cnn-ci
 $ ./cnn-cifar10 
 Parallel (if) Code
 CNN for 50000 images
-Load Data time:0.276452 seconds
-Create Network time:0.000337 seconds
-Load Network Parameters time:0.003297 seconds
-Create Ouputs time:0.000288 seconds
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.274524 seconds
+Create Network time:0.000273 seconds
+Load Network Parameters time:0.003308 seconds
+Create Ouputs time:0.000265 seconds
 
-Net Forward total time:157.851853 seconds
-    Time for conv1: 71.905290 seconds
-    Time for relu1: 2.798518 seconds
-    Time for pool1: 1.881958 seconds
-    Time for conv2: 52.789905 seconds
-    Time for relu2: 4.793857 seconds
-    Time for pool2: 2.103715 seconds
-    Time for conv3: 19.230628 seconds
-    Time for relu3: 2.142099 seconds
-    Time for pool3: 0.054728 seconds
-    Time for fc: 0.132637 seconds
-    Time for softmax: 0.005834 seconds
+Net Forward total time:157.350234 seconds
+    Time for conv1: 71.677875 seconds
+    Time for relu1: 2.804403 seconds
+    Time for pool1: 1.883093 seconds
+    Time for conv2: 52.614324 seconds
+    Time for relu2: 4.805726 seconds
+    Time for pool2: 2.106152 seconds
+    Time for conv3: 19.099938 seconds
+    Time for relu3: 2.149285 seconds
+    Time for pool3: 0.054824 seconds
+    Time for fc: 0.132830 seconds
+    Time for softmax: 0.009186 seconds
 
-  Conv: 143.925823 seconds
-  ReLU: 9.734475 seconds
-  Pool: 4.040400 seconds
-  FC:   0.132637 seconds
-  Softmax: 0.005834 seconds
+  Conv: 143.392137 seconds
+  ReLU: 9.759414 seconds
+  Pool: 4.044069 seconds
+  FC:   0.132830 seconds
+  Softmax: 0.009186 seconds
 
 Net Accuracy: 78.84 % 
-Net Accuracy time:0.000272 seconds
-Free memory time:0.016297 seconds
-Total time:158.148797 seconds
+Net Accuracy time:0.000275 seconds
+Free memory time:0.016539 seconds
+Total time:157.645419 seconds
+```
+
+## nc_acc
+
+```
+$ ./cnn-cifar10 
+Parallel (if) Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.275059 seconds
+Create Network time:0.000319 seconds
+Load Network Parameters time:0.003305 seconds
+Create Ouputs time:0.000279 seconds
+
+Net Forward total time:158.709261 seconds
+    Time for conv1: 72.090187 seconds
+    Time for relu1: 2.848683 seconds
+    Time for pool1: 1.884967 seconds
+    Time for conv2: 53.070161 seconds
+    Time for relu2: 4.838615 seconds
+    Time for pool2: 2.107968 seconds
+    Time for conv3: 19.464122 seconds
+    Time for relu3: 2.193207 seconds
+    Time for pool3: 0.055201 seconds
+    Time for fc: 0.132765 seconds
+    Time for softmax: 0.009326 seconds
+
+  Conv: 144.624470 seconds
+  ReLU: 9.880504 seconds
+  Pool: 4.048136 seconds
+  FC:   0.132765 seconds
+  Softmax: 0.009326 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000279 seconds
+Free memory time:0.016703 seconds
+Total time:159.005205 seconds
+END!
+
+Accelerator Kernel Timing data
+/home/gskondras/cifar/cnn-cifar10_0/1.2-Parallel/layers.c
+  conv_forward  NVIDIA  devicenum=0
+    time(us): 142,452,990
+    46: compute region reached 150000 times
+        46: kernel launched 150000 times
+            grid: [1024]  block: [128]
+             device time(us): total=142,452,990 max=2,101 min=345 avg=949
+            elapsed time(us): total=144,165,762 max=2,112 min=355 avg=961
+    46: data region reached 300000 times
 ```
