Parallel pad, Parallel pad managed

--- a/ph4070ti/2.2-Kernels-independent.md
+++ b/ph4070ti/2.2-Kernels-independent.md
@@ -92,3 +92,58 @@ Total time:409.379807 seconds
 END!
 ```
 
+## Profiling
+## nc_acc
+
+```
+$ ./cnn-cifar10 
+Parallel (if) Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.273413 seconds
+Create Network time:0.000294 seconds
+Load Network Parameters time:0.003293 seconds
+Create Ouputs time:0.000276 seconds
+
+Net Forward total time:410.174451 seconds
+    Time for conv1: 132.103772 seconds
+    Time for relu1: 8.392358 seconds
+    Time for pool1: 3.736079 seconds
+    Time for conv2: 197.271065 seconds
+    Time for relu2: 6.505940 seconds
+    Time for pool2: 0.873340 seconds
+    Time for conv3: 55.563786 seconds
+    Time for relu3: 4.223308 seconds
+    Time for pool3: 0.376135 seconds
+    Time for fc: 1.106002 seconds
+    Time for softmax: 0.009835 seconds
+
+  Conv: 384.938623 seconds
+  ReLU: 19.121607 seconds
+  Pool: 4.985554 seconds
+  FC:   1.106002 seconds
+  Softmax: 0.009835 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000271 seconds
+Free memory time:0.016523 seconds
+Total time:410.468521 seconds
+END!
+
+Accelerator Kernel Timing data
+/home/gskondras/cifar/cnn-cifar10_0/1.1-Kernels/layers.c
+  conv_forward  NVIDIA  devicenum=0
+    time(us): 382,607,671
+    50: compute region reached 150000 times
+        52: kernel launched 150000 times
+            grid: [1]  block: [128]
+             device time(us): total=382,607,671 max=4,381 min=1,066 avg=2,550
+            elapsed time(us): total=384,420,450 max=4,395 min=1,077 avg=2,562
+    50: data region reached 300000 times
+```
+
+
